resources/assets/js/gutenberg/editor-style.scss
.pattern-bg {
	background: url(#{$IMAGES-PATH}/light-pattern.png);
	background-size: 50%;
	padding-top: 50px;
	padding-bottom: 50px;
	margin-top: 0px;
	margin-bottom: 0px;
}
.wp-admin {
	.wp-block-willamette-blocks-image-box{
		&__content {
			position: relative;
		}
	}
	.wp-block-group {
		padding: 0px;
	}
	.is-style-Highlighted {
		background: $purple !important;
		color: $white !important;
	}
}
p {
	font-family: $body-font;
	color: $grey;
}
.is-style-leaf{
	position: relative;
	&::after {
		background: url(#{$IMAGES-PATH}/leaf.svg) no-repeat;
		content: "";
		position: absolute;
		top: 0;
		width: 200px;
		bottom: 0;
		left: 14%;
		background-size: 200px 200px;
		background-position: left 0px bottom -40px;
	}
}
.is-style-acorn{
	position: relative;
	&::after {
		background: url(#{$IMAGES-PATH}/acorn.svg) no-repeat;
		content: "";
		position: absolute;
		bottom: 60px;
		height: 100px;
		width: 100px;
		right: 14%;
		background-position: right 0px bottom 0px;
	}
}
h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is-style-Highlighted, h5.is-style-Highlighted {
	background: $purple;
	padding: 20px;
	color: $white;
	display: inline-block;
	padding-left: 100px;
}
.wp-block-columns.narrow-gutter{
	justify-content: center;
	.wp-block-willamette-blocks-image-box {
		margin: 0px 5px 20px;
	}	
}
.wp-block-columns {
	align-items: flex-start;
	&.four-image-bottom, &.four-image-top {
		margin: 0px;
		padding: 0px;
		align-items: center;
	}
	&.five-column-three {
		flex-direction: row;
		flex-wrap: wrap;
		flex-grow: 0;
		justify-content: center;
		.wp-block-column {
			min-width: 33.333%;
			flex-grow: 0;
		}
	}
}
.wp-block-button {
	margin: 20px 0px 10px 0px;
	
	a { text-decoration: none; }
}
.wp-block-column:not(:first-child){
	margin-left: 0px;
	padding: 5px;
}
.wp-block-willamette-blocks-image-box{
	position: relative;

	img {
		max-width: 100%;
		height: auto;
		width: auto;
	}
	p {
		max-width: 650px;
		line-height: 1.4;
		color: $white;
	}
	&__content > h1, &__content >  h2, &__content > h3, &__content > h4, &__content > h5, &__content > h6 {
		font-family: $alt-header-font;
		font-size: 2.2em;
		font-weight: 800;
		padding: 10px 10px;
		line-height: 1.1;
		color: $white;
		min-height: 80px;
		display: flex;
		justify-content: center;
		align-items: center;
	}
	&__content {	
		position: absolute;
		max-width: $max-width;
	}
	.wp-block-group {
		padding: 20px 5px;
	}
	.has-purple-background-color {
		background-color: $transparent-purple;
	}
	.has-teal-background-color {
		background-color: $transparent-teal;
	}
	.has-lime-background-color {
		background-color: $transparent-lime;
	}
	.has-green-background-color {
		background-color: $transparent-green;
	}
	.has-orange-background-color {
		background-color: $transparent-orange;
	}
	.has-blue-background-color {
		background-color: $transparent-blue;
	}
	.has-dark-blue-background-color {
		background-color: $transparent-dark-blue;
	}
	.has-grey-background-color {
		background-color: $transparent-grey;
	}
	

	.is-style-overhang-middle &__content{
		width: 85%;
		top: 100px;
		left: 50%;
		transform: translateX(-50%);
		.wp-block-group {
			height: 320px;
			overflow: hidden;
		}
	}
	.is-style-overhang-left  &__content{
		width: calc(100% + 20px);
		bottom: 3px;
		left: -20px;
		@include screen-px(782){
			width: 100%;
			left: 0px;
		}
	}
	.is-style-overhang-right  &__content{
		width: calc(100% + 20px);
		bottom: 3px;
		right: -20px;
		@include screen-px(782){
			width: 100%;
			right: 0px;
		}
	}
	.is-style-no-overhang  &__content{
		width: 100%;
		bottom: 2px;
	}
	.is-style-full-width-center  &__content{
		top: 50%;
		transform: translateY(-50%);
		width: 100%;
	}
	.wp-block-columns {
		padding: 30px;
	}
	.is-style-overhang-middle.alignfull{
		left: 50%;
		transform: translateX(-50%);
		float: left;
		position: relative;
		margin: -170px 0px 50px;
		img {
			@include screen-px(782){
				height: auto;
				min-height: 400px;
				width: auto;
				object-fit: cover;
			}		
		}
	}
	&.is-style-full-width-center-narrow-acorn {
		.wp-block-willamette-blocks-image-box__content {
			max-width: 840px;
			left: 50%;
			top: 50%;
			transform: translate(-50%, -50%);
			position: absolute;
			img {
				@include screen-px(782){
					height: auto;
					min-height: 400px;
					width: auto;
					object-fit: cover;
				}
			}
			.wp-block-group {
				max-height: 390px;
				overflow: hidden;
			}
		}
	}
	@include screen-px(750){
		.wp-block-willamette-blocks-image-box__content {
			width: 100%;
			position: absolute;
			top: 50%;
			left: 50%;
			transform: translate(-50%, -50%);
			
		}
		&.is-style-overhang-middle .wp-block-willamette-blocks-image-box__content .wp-block-group {
			height: auto;
			overflow: hidden;
			padding: 0px;
		}
	}
}
.wp-block-column {
	.wp-block-willamette-blocks-image-box.is-style-overhang-middle  {
		.wp-block-willamette-blocks-image-box__content {
			bottom: -6px;
			top: unset;
			& > * {
				min-height: auto;
			}
		}
	}
}
@include screen-px (750){
	.wp-block-columns.narrow-gutter .is-style-overhang-middle {
		.wp-block-willamette-blocks-image-box__content {
			width: 140%;
			bottom: 45%;
			transform: translateX(-50%);
		}
	}
	.wp-block-columns.four-image-bottom {
		.wp-block-willamette-blocks-image-box__content {
			top: 50%;
			bottom: unset;
		}
	}
}

